plugins {
    id 'java'
    id 'me.champeau.jmh' version '0.6.8'
}

group = 'me.mneri.csv'
version = '2.0-SNAPSHOT'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26) // or your target Java version
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.1'
    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview', '--add-modules=jdk.incubator.vector']
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview', '--add-modules=jdk.incubator.vector']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview', '--add-modules=jdk.incubator.vector']
}